# kana

./: .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  asset-manifest.json  docker-compose.yml  index.html  manifest.json  package.json  paper.md  ref.bib  service-worker.js  service-worker.js.map  serviceworker.js
.github/workflows/: node.js.yml
assets/logos/: README.md  kana.pixil
old/: ScatterPlotRegl.js
old/ImportFiles/: index.js
perf/: README.md  package.json  puppt.js
public/: index.html  manifest.json
scran/: KanaDBHandler.js  WasmBuffer.js  _choose_clustering.js  _custom_markers.js  _inputs.js  _model_gene_var.js  _neighbor_index.js  _normalization.js  _pca.js  _qc_filter.js  _qc_metrics.js  _qc_thresholds.js  _score_markers.js  _snn_cluster.js  _snn_neighbors.js  _tsne_init.js  _tsne_monitor.js  _tsne_run.js  _umap_init.js  _umap_monitor.js  _umap_run.js  _utils.js  _utils_markers.js  _utils_serialize.js  _utils_viz_child.js  _utils_viz_parent.js  _viz_neighbors.js  _vizutils_child.js  _vizutils_parent.js  mito.js  scran.api.js  scran.js  scran.wasm  scran.worker.js  scranWorker.js  transplant.sh  tsneWorker.js  umapWorker.js  utils.js
src/: App.css  App.js  App.jsx  AppToaster.js  DownloadToaster.js  index.css  index.js  service-worker.js  serviceWorkerRegistration.js
wasm/: CMakeLists.txt  README.md
wasm/docs/: Doxyfile
wasm/src/: JSVector.h  NumericMatrix.cpp  NumericMatrix.h  PerCellQCMetrics_Results.h  cluster_snn_graph.cpp  filter_cells.cpp  log_norm_counts.cpp  model_gene_var.cpp  per_cell_qc_filters.cpp  per_cell_qc_metrics.cpp  read_matrix_market.cpp  run_pca.cpp  run_tsne.cpp  run_umap.cpp  score_markers.cpp  utils.h
(+1638 files in other folders)
